Removed unused core classes, session models, and templates; added static resources (CSS/JS), updated API endpoints, and introduced token-based CSRF protection.